--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,14 @@
 
             <repository>
               <id>nexus</id>
-              <name>Mithun Technologies Releases Nexus Repository</name>
-              <url>http://3.110.133.49:8007/repository/release1/</url>
+              <name>boot Releases Nexus Repository</name>
+              <url>http://43.205.196.5:8081/repository/Release/</url>
             </repository>
 
             <snapshotRepository>
               <id>nexus</id>
-              <name>Mithun Technologies Snapshot Nexus Repository </name>
-              <url>http://3.110.133.49:8007/repository/snapshotpet/</url>
+              <name>boot Snapshot Nexus Repository </name>
+              <url>http://43.205.196.5:8081/repository/snapshot/</url>
             </snapshotRepository>
 
      </distributionManagement>
