--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Preleases Nexus Repository</name>
+	      <name>jenkinsreleases Nexus Repository</name>
 	      <url>http://54.159.24.235:8081/repository/jenkinsrelease/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Psnapshot Nexus Repository </name>
+	      <name>jenkinssnapshot Nexus Repository </name>
 	      <url>http://54.159.24.235:8081/repository/jenkinssnapshot/</url>
 	    </snapshotRepository>
 	    
