--- a/pom.xml
+++ b/pom.xml
@@ -57,13 +57,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>jenkinsreleases Nexus Repository</name>
-	      <url>hhttp://3.82.228.21:8081/repository/bookrelease/</url>
+	      <url>http://3.82.228.21:8081/repository/bookrelease/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>jenkinssnapshot Nexus Repository </name>
-	      <url>hhttp://3.82.228.21:8081/repository/booksnapshot/</url>
+	      <url>http://3.82.228.21:8081/repository/booksnapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
